--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-facebook-pixel": "^1.0.4",
     "react-icons": "^4.11.0",
+    "react-web-share": "^2.0.2",
     "tailwindcss": "3.3.3"
   }
 }
